# ununknown

./: .dockerignore  .env.example  .gitignore  .trivyignore.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  config.example.toml  dev.sh  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  USAGE.md  architecture.md  docker.md
docs/backend/: README.md  api.md  configuration.md  database.md  developer-guide.md  workflows.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Settings.tsx  TrackList.tsx  api.ts  components.tsx  hooks.ts  index.css  main.tsx
migrations/: 0001_init.sql  0001_initial.sql  0002_automatic_scan_files.sql  0002_v020.sql  0003_reference_library.sql  0003_v030.sql  0004_previews.sql  0005_fingerprint_cache.sql  0006_candidate_release_metadata.sql  0007_candidate_sources.sql
scripts/: build-release.sh  docker-entrypoint.sh  e2e-fixtures.sh  run-production.sh
src/: api.rs  audio.rs  config.rs  db.rs  fs_scan.rs  jobs.rs  main.rs  matcher.rs  path_templates.rs  static_files.rs  tag_writer.rs  types.rs
src/app/: mod.rs  state.rs
src/application/: metadata_completion.rs  mod.rs  previews.rs  reference_library.rs  scan_pipeline.rs  smart_approval.rs
src/domain/: audio.rs  credits.rs  genre.rs  matcher.rs  mod.rs  path_templates.rs
src/http/: error.rs  mod.rs  router.rs
src/infrastructure/: fingerprint_cache.rs  mod.rs  provider_cache.rs  static_files.rs  (+1 more)
(+94 files in other folders)
