[package]
name = "ununknown"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lofty = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
strsim = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
